--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "description": "an element to help manage anonymous authentication",
   "main": "paperfire-anon.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.4.0"
+    "polymer": "Polymer/polymer#^1.4.0",
+    "polymerfire": "firebase/polymerfire#^0.10.2"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
