--- a/bower.json
+++ b/bower.json
@@ -12,5 +12,17 @@
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
     "web-component-tester": "^4.0.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
-  }
+  },
+  "keywords": [
+    "firebase",
+    "webcomponents",
+    "material",
+    "polymer",
+    "auth",
+    "anonymous",
+    "login"
+  ],
+  "authors": [
+    "Alexander Kushi-Willis <dev@ackushiw.com>"
+  ]
 }
